update include var

--- a/templates/zabbix_agent2.conf.erb
+++ b/templates/zabbix_agent2.conf.erb
@@ -206,7 +206,7 @@ Timeout=<%= @timeout %>
 #	You may include individual files or all files in a directory in the configuration file.
 #	Installing Zabbix will create include directory in /usr/local/etc, unless modified during the compile time.
 #
-Include=<%= @include_dir %>
+Include=<%= @_include_dir %>
 
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
